--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -1,11 +1,12 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script type="text/javascript" src="/js/mainCategoryModification.js"></script>
+<script src="/js/mainCategoryModification.js"></script>
 
 <head>
     <meta charset="UTF-8">
     <title>Budget</title>
 </head>
+
 <body>
 <form>
     <div>
@@ -25,4 +26,5 @@
     </div>
 </form>
 </body>
+
 </html>
