--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -24,6 +24,18 @@
         }
     </style>
 
+    <script>
+        $(function() {
+
+            $('.list-group-item').on('click', function() {
+                $('.glyphicon', this)
+                    .toggleClass('glyphicon-chevron-right')
+                    .toggleClass('glyphicon-chevron-down');
+            });
+
+        });
+    </script>
+
 </head>
 
 <body>
@@ -32,49 +44,39 @@
 <div class="container">
     <div class="row">
 
-        <div class="accordion">
-            <div class="accordion-group">
+        <div class="just-padding">
+            <div class="list-group list-group-root well">
 
                 <th:block th:each="maincat, iterStat : ${mainCategories}">
-                    <div class="accordion-heading mainCategoryHeading">
-                        <a class="accordion-toggle" data-toggle="collapse"
-                           th:href="'#mainCategory' + ${iterStat.index}"
-                           th:text="${maincat.name}">StaticMainCategory</a>
+                    <div class="mainCategoryHeading">
+                        <a class="list-group-item" data-toggle="collapse"
+                           th:href="'#mainCategory' + ${iterStat.index}">
+                            <i class="glyphicon glyphicon-chevron-right" th:text="${maincat.name}">MainCategory</i>
+                        </a>
                     </div>
+                    <div class="list-group collapse" th:id="'mainCategory' + ${iterStat.index}">
 
-                    <div class="accordion-body collapse" th:id="'mainCategory' + ${iterStat.index}">
-                        <div class="accordion-inner">
-                            <div class="accordion">
-                                <div class="accordion-group">
-
-                                    <div th:if="${!maincat.items.empty}">
-                                        <div class="item">
-                                            <div th:text="${maincat.items}"></div>
-                                        </div>
-                                    </div>
-                                    <th:block th:each="subcat, iterStat : ${maincat.subCategories}">
-                                        <div class="accordion-heading subcategoryHeading">
-                                            <a class="accordion-toggle" data-toggle="collapse"
-                                               th:href="'#subCategory' + ${iterStat.index}"
-                                               th:text="${subcat.name}">StaticSubCategory</a>
-                                        </div>
-
-                                        <div class="accordion-body collapse"
-                                             th:id="'subCategory' + ${iterStat.index}">
-                                            <div class="accordion-inner">
-                                                <div class="accordion item">
-                                                    <div class="accordion-group">
-                                                        <th:block th:each="item : ${subcat.items}">
-                                                            <div th:text="${item.name} + ${item.money}"></div>
-                                                        </th:block>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </th:block>
-                                </div>
+                        <div th:if="${!maincat.items.empty}">
+                            <div class="item">
+                                <div th:text="${maincat.items}"></div>
                             </div>
                         </div>
+
+                        <th:block th:each="subcat, iterStat : ${maincat.subCategories}">
+                            <div class="subcategoryHeading">
+                                <a class="list-group-item" data-toggle="collapse"
+                                   th:href="'#subCategory' + ${iterStat.index}">
+                                    <i class="glyphicon glyphicon-chevron-right" th:text="${subcat.name}"></i>
+                                </a>
+                            </div>
+                            <div class="list-group collapse"
+                                 th:id="'subCategory' + ${iterStat.index}">
+
+                                <th:block th:each="item : ${subcat.items}">
+                                    <a class="list-group-item item" th:text="${item.name} + ${item.money}"></a>
+                                </th:block>
+                            </div>
+                        </th:block>
                     </div>
                 </th:block>
             </div>
