--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -35,9 +35,22 @@
 
                 <th:block th:each="subcat, iterStat : ${maincat.subCategories}">
                     <div class="row subcategoryHeading">
-                        <a class="list-group-item" data-toggle="collapse"
+                        <a class="list-group" data-toggle="collapse"
                            th:href="'#subCategory' + ${iterStat.index}">
-                            <i class="glyphicon glyphicon-chevron-right" th:text="${subcat.name}"></i>
+                            <div class="glyphicon glyphicon-chevron-right col-xs-3 col-lg-3" th:text="${subcat.name}"></div>
+                            <div class="col-xs-3 col-lg-3">Osszes penz</div>
+                            <div class="col-xs-3 col-lg-3"></div>
+                            <div class="col-xs-3 col-lg-3">
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </a>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-pencil"></span>
+                                </a>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-minus"></span>
+                                </a>
+                            </div>
                         </a>
                     </div>
                     <div class="row">
@@ -45,10 +58,10 @@
                              th:id="'subCategory' + ${iterStat.index}">
 
                             <th:block th:each="item : ${subcat.items}">
-                                <div class="list-group-item item col-xs-3 col-lg-3" th:text="${item.name}"></div>
-                                <div class="list-group-item col-xs-3 col-lg-3" th:text=" ${item.money}"></div>
-                                <div class="list-group-item col-xs-3 col-lg-3" th:text=" ${item.date}"></div>
-                                <div class="list-group-item col-xs-3 col-lg-3">
+                                <div class="item col-xs-3 col-lg-3" th:text="${item.name}"></div>
+                                <div class="col-xs-3 col-lg-3" th:text=" ${item.money}"></div>
+                                <div class="col-xs-3 col-lg-3" th:text=" ${item.date}"></div>
+                                <div class="col-xs-3 col-lg-3">
                                     <a href="#">
                                         <span class="glyphicon glyphicon-plus"></span>
                                     </a>
