--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -20,16 +20,44 @@
 
         <th:block th:each="maincat, iterStat : ${mainCategories}">
             <div class="row mainCategoryHeading">
-                <a class="list-group-item" data-toggle="collapse"
+                <a class="list-group" data-toggle="collapse"
                    th:href="'#mainCategory' + ${iterStat.index}">
-                    <i class="glyphicon glyphicon-chevron-right" th:text="${maincat.name}">MainCategory</i>
+                    <i class="glyphicon glyphicon-chevron-right col-xs-3 col-lg-3" th:text="${maincat.name}">MainCategory</i>
+                    <div class="col-xs-3 col-lg-3"></div>
+                    <div class="col-xs-3 col-lg-3"></div>
+                    <div class="col-xs-3 col-lg-3">
+                        <a href="#">
+                            <span class="glyphicon glyphicon-plus"></span>
+                        </a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                        </a>
+                        <a href="#">
+                            <span class="glyphicon glyphicon-minus"></span>
+                        </a>
+                    </div>
                 </a>
             </div>
             <div class="list-group collapse" th:id="'mainCategory' + ${iterStat.index}">
 
                 <div th:if="${!maincat.items.empty}">
-                    <div class="row item">
-                        <div th:text="${maincat.getItems()}"></div>
+                    <div class="row">
+                        <th:block th:each="item : ${maincat.items}">
+                            <div class="item col-xs-3 col-lg-3" th:text="${item.name}"></div>
+                            <div class="col-xs-3 col-lg-3" th:text=" ${item.money}"></div>
+                            <div class="col-xs-3 col-lg-3" th:text=" ${item.date}"></div>
+                            <div class="col-xs-3 col-lg-3">
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-plus"></span>
+                                </a>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-pencil"></span>
+                                </a>
+                                <a href="#">
+                                    <span class="glyphicon glyphicon-minus"></span>
+                                </a>
+                            </div>
+                        </th:block>
                     </div>
                 </div>
 
@@ -37,7 +65,8 @@
                     <div class="row subcategoryHeading">
                         <a class="list-group" data-toggle="collapse"
                            th:href="'#subCategory' + ${iterStat.index}">
-                            <div class="glyphicon glyphicon-chevron-right col-xs-3 col-lg-3" th:text="${subcat.name}"></div>
+                            <div class="glyphicon glyphicon-chevron-right col-xs-3 col-lg-3"
+                                 th:text="${subcat.name}"></div>
                             <div class="col-xs-3 col-lg-3">Osszes penz</div>
                             <div class="col-xs-3 col-lg-3"></div>
                             <div class="col-xs-3 col-lg-3">
