--- a/src/main/resources/templates/budget.html
+++ b/src/main/resources/templates/budget.html
@@ -3,7 +3,7 @@
 <head>
     <title>Budget</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="js/mainCategoryModification.js"></script>
+    <script src="js/budget.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
 
